--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     yüksek lisans yapıyorum. Ayrıca yazılım üzerine bir çok yerden eğitim alarak kendimi geliştirmeye çalışıyorum.
 </p>
 
+<!-- h3+ol>li*3>ul>li*3>a -->
+<h3>İlgi Alanlarım</h3>
+<ol>
+    <li>Film
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt1790864/?ref_=nv_sr_srsg_0" target="_blank">Labirent: Ölümcül Kaçış</a></li>
+            <li><a href="">Lucy</a></li>
+            <li><a href="">Kaybedenler Kulübü</a></li>
+        </ul>
+    </li>
+    <li>Dizi
+        <ul>
+            <li><a href="#LM">Leyla ile Mecnun</a></li>
+            <li><a href="">La Casa de Papel</a></li>
+            <li><a href="">Black Miror</a></li>
+        </ul>
+    </li>
+    <li>Kitap
+        <ul>
+            <li><a href="https://www.goodreads.com/tr/book/show/170448.Animal_Farm" target="_blank">Hayvan Çiftliği</a></li>
+            <li><a href="">Zeka Tuzağı</a></li>
+            <li><a href="">Altıncı Koğuş</a></li>
+        </ul>
+    </li>
+</ol>
+
 <h2>Sevdiğim Diziler</h2>
-<h3>Leyla İle Mecnun</h3>
-<h3>La Casa de Papel</h3>
+<!-- Yukarıdaki Leyla ile mecnun yazısına basınca buraya iner -->
+<h3 id="LM">Leyla ile Mecnun</h3>
+<img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b2/Leyla_ile_Mecnun_poster_2012.jpg/250px-Leyla_ile_Mecnun_poster_2012.jpg" alt="Leyla ile Mecnun">
